--- a/index.css
+++ b/index.css
@@ -24,7 +24,7 @@ footer {
 
 .flex-container {
   display: flex;
-  /*flex-direction: column;*/
+  flex-direction: column;
   width: 100vw;
   height: 100vh;
 }
