--- a/index.css
+++ b/index.css
@@ -14,6 +14,12 @@ main {
   background-color: #92C9D5;
   width: 100%;
   height: 100%;
+  <div class="item">1</div>
+<div class="item">2</div>
+<div class="item">3</div>
+<div class="item">4</div>
+<div class="item">5</div>
+<div class="item">6</div>
 }
 
 footer {
