--- a/index.css
+++ b/index.css
@@ -14,12 +14,6 @@ main {
   background-color: #92C9D5;
   width: 100%;
   height: 100%;
-  <div class="item">1</div>
-  <div class="item">2</div>
-  <div class="item">3</div>
-  <div class="item">4</div>
-  <div class="item">5</div>
-  <div class="item">6</div>
 }
 
 footer {
@@ -33,4 +27,10 @@ footer {
   flex-direction: column;
   width: 100vw;
   height: 100vh;
+}
+
+.item {
+  height: 100px;
+  width: 100px;
+  margin: 5px;
 }
