Automatically backed up by Learn

--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@ main {
   display: flex;
   /*flex-wrap: wrap;
   flex-direction: column;*/
-  flex-flow: column wrap;
+  flex-flow: wrap;
 }
 
 footer {
