--- a/index.css
+++ b/index.css
@@ -15,9 +15,8 @@ main {
   width: 100%;
   height: 100%;
   display: flex;
-  /*flex-wrap: wrap;
-  flex-direction: column;*/
   flex-flow: wrap;
+  justify-content: center;
 }
 
 footer {
