--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@ main {
   height: 100%;
   display: flex;
   flex-flow: column wrap;
-  justify-content: center;
+  justify-content: flex-end;
 }
 
 footer {
