--- a/index.css
+++ b/index.css
@@ -15,8 +15,8 @@ main {
   width: 100%;
   height: 100%;
   display: flex;
-  flex-flow: column wrap;
-  justify-content: space-around;
+  flex-flow: wrap;
+  justify-content: center;
 }
 
 footer {
