--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@ main {
   display: flex;
   flex-flow: wrap;
   justify-content: center;
-  align-items: center;
+  align-items: stretch;
   align-content: center;
   flex: none;
 }
