--- a/index.css
+++ b/index.css
@@ -6,18 +6,49 @@ body {
 
 header {
   background-color: #FBFFF4;
-  height: 100%;
+  height: 80px;
   width: 100%;
+  flex-shrink: 0;
 }
 
 main {
   background-color: #92C9D5;
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-flow: wrap;
+  justify-content: center;
+  align-items: baseline;
+  align-content: center;
+  flex: initial;
 }
 
 footer {
   background-color: #DAEEEF;
-  height: 100%;
+  height: 80px;
   width: 100%;
+  flex-shrink: 3;
+}
+
+.flex-container {
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  height: 100vh;
+}
+
+.item {
+  background-color: #FCF2EC;
+  height: 100px;
+  width: 100px;
+  margin: 5px;
+}
+
+.setWidth {
+  flex-basis: 100px;
+  flex-grow: 1;
+}
+
+.setAlign {
+    align-self: flex-end; 
 }
